[CDRB-2893] handle account-transactions API
