# src/main/java/com/rhbgroup/dte/obc/domains/transaction/controller/TransactionController.java
@@ -5,6 +5,8 @@ import com.rhbgroup.dte.obc.common.func.Functions;
 import com.rhbgroup.dte.obc.domains.transaction.service.TransactionService;
 import com.rhbgroup.dte.obc.model.FinishTransactionRequest;
 import com.rhbgroup.dte.obc.model.FinishTransactionResponse;
+import com.rhbgroup.dte.obc.model.GetAccountTransactionsRequest;
+import com.rhbgroup.dte.obc.model.GetAccountTransactionsResponse;
 import com.rhbgroup.dte.obc.model.InitTransactionRequest;
 import com.rhbgroup.dte.obc.model.InitTransactionResponse;
 import lombok.RequiredArgsConstructor;
@@ -20,6 +22,7 @@ public class TransactionController implements TransactionApiDelegate {
   @Override
   public ResponseEntity<InitTransactionResponse> initTransaction(
       InitTransactionRequest initTransactionRequest) {
+
     return Functions.of(transactionService::initTransaction)
         .andThen(ResponseEntity::ok)
         .apply(initTransactionRequest);
@@ -28,8 +31,18 @@ public class TransactionController implements TransactionApiDelegate {
   @Override
   public ResponseEntity<FinishTransactionResponse> finishTransaction(
       FinishTransactionRequest finishTransactionRequest) {
+
     return Functions.of(transactionService::finishTransaction)
         .andThen(ResponseEntity::ok)
         .apply(finishTransactionRequest);
+  }
+
+  @Override
+  public ResponseEntity<GetAccountTransactionsResponse> queryTransactionHistory(
+      GetAccountTransactionsRequest getAccountTransactionsRequest) {
+
+    return Functions.of(transactionService::queryTransactionHistory)
+        .andThen(ResponseEntity::ok)
+        .apply(getAccountTransactionsRequest);
   }
 }
